Integrated feedback from Sindre

--- a/sass/_typography.sass
+++ b/sass/_typography.sass
@@ -15,12 +15,22 @@ h1, h2, h3
     @media screen and (max-width: 640px)
         text-align: center
 
-h1, h2
-    margin: 0
-
 h1
+    margin: 0
     text-align: center
     padding: 1.5em 0
+
+h2
+    font-size: 2em
+    margin:
+        top: 1.5em
+        bottom: 0
+
+h3
+    font-size: 1.8em
+    margin:
+        top: 1em
+        bottom: 0
 
 a
     color: $C_HEADLINE
