--- a/sass/_app.sass
+++ b/sass/_app.sass
@@ -1,5 +1,4 @@
 @import "compass/css3/images"
-@import "compass/css3/hyphenation"
 @import "layout/*.png"
 @import "colors"
 
@@ -184,6 +183,7 @@ hr.global
 
     ul
         padding: 0
+        margin: 2em 0
 
     li
         +border-radius($radius / 2)
@@ -235,7 +235,6 @@ hr.global
         text-transform: uppercase
 
     p
-        +hyphens(auto)
         margin-top: 0
         text-align: justify
 
@@ -244,6 +243,14 @@ hr.global
     position: fixed
     width: 15em
     min-height: 8em
+
+    background-color: #171717
+    color: #FDFDFB
+    border: 1px solid #000
+    border-top-right-radius: 4px
+    border-bottom-right-radius: 4px
+    padding: 34px 25px 22px 20px
+    margin: 30px 25px 0 0
 
     @media screen and (max-width: 1480px)
         float: none
@@ -277,14 +284,8 @@ hr.global
         h2, p
             display: none
 
-
-    background-color: #171717
-    color: #FDFDFB
-    border: 1px solid #000
-    border-top-right-radius: 4px
-    border-bottom-right-radius: 4px
-    padding: 34px 25px 22px 20px
-    margin: 30px 25px 0 0
+    h2
+        margin: 0
 
     ul
         list-style: none
