--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@
     <title>hyperagent.js</title>
     <meta http-requiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <meta name="description" content="hyperagent.js is a JavScript library for consuming HAL hypermedia APIs in the browser.">
+    <meta name="description" content="hyperagent.js is a JavaScript library for consuming HAL hypermedia APIs in the browser.">
     <meta name="author" content="weluse GmbH">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
