--- a/sample/components/q/examples/async-generators/0.html
+++ b/sample/components/q/examples/async-generators/0.html
@@ -2,14 +2,15 @@
 <html>
     <head>
     <!--
-        Works in Firefox, or where generators are implemented.
+        Works in browsers that support ES6 geneartors, like Chromium 29 with
+        the --harmony flag.
 
-        Peter Hallam, Tom van Cutsem, Mark S. Miller, Dave Herman.
+        Peter Hallam, Tom van Cutsem, Mark S. Miller, Dave Herman, Andy Wingo.
         The animation example was taken from
         <http://wiki.ecmascript.org/doku.php?id=strawman:deferred_functions>
     -->
     <script src="../../q.js"></script>
-    <script type="application/javascript;version=1.7">
+    <script>
 
         function delay(millis, answer) {
             const deferredResult = Q.defer();
@@ -19,7 +20,7 @@
             return deferredResult.promise;
         }
 
-        var deferredAnimate = Q.async(function(element) {
+        var deferredAnimate = Q.async(function*(element) {
             for (var i = 0; i < 100; ++i) {
                 element.style.marginLeft = ''+i+'px';
                 yield delay(20);
