--- a/sample/components/q/examples/async-generators/2-error-propagation.html
+++ b/sample/components/q/examples/async-generators/2-error-propagation.html
@@ -2,14 +2,15 @@
 <html>
     <head>
     <!--
-        Works in Firefox, or where generators are implemented.
+        Works in browsers that support ES6 geneartors, like Chromium 29 with
+        the --harmony flag.
     -->
     <script src="../../q.js"></script>
-    <script type="application/javascript;version=1.7">
+    <script>
 
         function test() {
 
-            var generator = Q.async(function () {
+            var generator = Q.async(function* () {
                 try {
                     var ten = yield Q.reject('Rejected!');
                     console.log("Should not get here 1");
