Styled version number

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -32,7 +32,7 @@
 
         <section role="main">
             <aside class="dlbar">
-                <h2>Get hyperagent <var id="hyperagent-version">v0.2.1</var></h2>
+                <h2><span>Get hyperagent</span> <var id="hyperagent-version">v0.2.1</var></h2>
                 <ul>
                     <li><a class="button download" href="{{ site.baseurl }}/install/">Download</a></li>
                     <li><a class="button github" href="https://github.com/weluse/hyperagent">View On GitHub</a></li>
