--- a/sass/_app.sass
+++ b/sass/_app.sass
@@ -265,8 +265,12 @@ hr.global
             top: 34px
             margin: 0
 
+    @media screen and (max-width: 1150px)
+        span
+            display: none
+
     @media screen and (max-width: 790px)
-        p
+        p, var
             display: none
 
     @media screen and (max-width: 475px)
